# credit-risk-decision-engine

./: .env.example  .gitignore  Makefile  pyproject.toml  readme.md
.github/workflows/: ci.yml
artifacts/: latest_eval.json
artifacts/monitoring/: monitor_report_20260112_225438.json  monitor_report_20260112_231328.json
bundle/latest/: PATH.txt
bundle/model_0.1.0/: feature_columns.json  metadata.json  reference_stats.json
data/fixtures/: train_sample.parquet
docs/: architecture.md  assumptions.md  evaluation_report.md  model_card.md  ops_runbook.md
scripts/: eda.py  ingest.py  monitor.py  train.py
src/UNKNOWN.egg-info/: top_level.txt
src/credit_risk_decision_engine/: config.py
src/credit_risk_decision_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/credit_risk_decision_engine/evaluation/: metrics.py
src/credit_risk_decision_engine/features/: build.py  leakage.py  split.py
src/credit_risk_decision_engine/modeling/: bundle.py  train.py
src/credit_risk_decision_engine/monitoring/: psi.py
src/credit_risk_decision_engine/serving/: app.py  model_loader.py  reasons.py  schemas.py
src/credit_risk_decision_engine/validation/: contract.py  validate.py
tests/: test_data_contract.py  test_inference_contract.py  test_metrics_regression.py  test_monitor_smoke.py
ui/: streamlit_app.py
